@@ -74,6 +74,7 @@ BerliOS Bugs are marked with (BerliOS #XXXX).
   exist (Bug 600351 - kukuk)
 * pam_mkhomedir: Set owner/permissions of home directory after we
   created all files (Bug 1032922 - kukuk)
+* pam_rhosts: Get ride of static buffer for path (kukuk)
 
 0.79: Thu Mar 31 16:48:45 CEST 2005
 * pam_tally: added audit option (toady)
